adiciona componente de tópicos em alta e atualiza o layout da aplicação

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
-<app-header></app-header>
-
-<main class="container mx-auto my-8">
-  <router-outlet></router-outlet>
-</main>
+<div class="min-h-screen">
+  <div class="max-w-7xl mx-auto px-6 lg:px-8">
+    <app-header class="block py-6"></app-header>
+    
+    <main class="pb-8">
+      <router-outlet></router-outlet>
+    </main>
+  </div>
+</div>
