--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,3 +1,9 @@
-<section>
-
+<section class="flex">
+    <div class="flex-1">
+    </div>
+    <aside class="w-80 hidden lg:block">
+        <div class="sticky top-4 space-y-4">
+            <app-trending-topics></app-trending-topics>
+        </div>
+    </aside>
 </section>
