--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 @import "tailwindcss";
 
 body { 
-    margin: 0; 
-    font-family: Roboto, "Helvetica Neue", sans-serif;
-    background-color: rgb(20, 20, 20);
+  margin: 0; 
+  padding: 0;
+  font-family: 'Raleway', sans-serif;
+  color: #fff;
+  background-color: #000;
 }
